// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render without value 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid #00000040;
  border-radius: 8px;
  background-color: #ffffff;
  -webkit-transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  width: 300px;
}

.c1 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 0;
  padding: 6px 10px;
  background-color: transparent;
  font-family: "IBM Plex Sans",sans-serif;
  outline: none;
}

<div>
  <div
    class=""
  >
    <div
      class="c0"
      data-testid="pbl-input-wrapper"
      name="input"
      width="300"
    >
      <input
        class="c1"
        data-testid="pbl-input"
        id="custom-id"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Show error when an error message is given 1`] = `
.c2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.5em;
  margin-bottom: 0;
  margin-top: 4px;
  color: #F44336;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid #00000040;
  border-radius: 8px;
  background-color: #ffffff;
  -webkit-transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  border-color: #F44336;
  width: 300px;
}

.c0:focus {
  box-shadow: 0 0 0 3px #FFD3D0;
}

.c1 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 0;
  padding: 6px 10px;
  background-color: transparent;
  font-family: "IBM Plex Sans",sans-serif;
  outline: none;
}

<div>
  <div
    class=""
  >
    <div
      class="c0"
      data-testid="pbl-input-wrapper"
      name="input"
      width="300"
    >
      <input
        class="c1"
        data-testid="pbl-input"
        id="custom-id"
        value="some"
      />
    </div>
    <p
      class="c2"
      color="negative.main"
      data-testid="pbl-input-infotext"
    >
      Something 
      <strong>
        terrible
      </strong>
       happened!
    </p>
  </div>
</div>
`;

exports[`Show infotext when available 1`] = `
.c2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.5em;
  margin-bottom: 0;
  margin-top: 4px;
  color: #00000080;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid #00000040;
  border-radius: 8px;
  background-color: #ffffff;
  -webkit-transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  width: 300px;
}

.c1 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 0;
  padding: 6px 10px;
  background-color: transparent;
  font-family: "IBM Plex Sans",sans-serif;
  outline: none;
}

<div>
  <div
    class=""
  >
    <div
      class="c0"
      data-testid="pbl-input-wrapper"
      name="input"
      width="300"
    >
      <input
        class="c1"
        data-testid="pbl-input"
        id="custom-id"
        value="some"
      />
    </div>
    <p
      class="c2"
      color="text.info"
      data-testid="pbl-input-infotext"
    >
      Something that 
      <strong>
        helps
      </strong>
    </p>
  </div>
</div>
`;

exports[`Show label when available 1`] = `
.c0 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.4em;
  font-weight: 500;
  margin-bottom: 0.75em;
  margin-bottom: 6px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid #00000040;
  border-radius: 8px;
  background-color: #ffffff;
  -webkit-transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  width: 300px;
}

.c2 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 0;
  padding: 6px 10px;
  background-color: transparent;
  font-family: "IBM Plex Sans",sans-serif;
  outline: none;
}

<div>
  <div
    class=""
  >
    <label
      data-testid="pbl-input-label"
      for="custom-id"
    >
      <p
        class="c0"
      >
        Your 
        <strong>
          name
        </strong>
      </p>
    </label>
    <div
      class="c1"
      data-testid="pbl-input-wrapper"
      name="input"
      width="300"
    >
      <input
        class="c2"
        data-testid="pbl-input"
        id="custom-id"
        value="some"
      />
    </div>
  </div>
</div>
`;
